# Plato-Scientific-Research-Autonomous-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .safety-policy.yml  CHANGELOG.md  CLAUDE.md  Caddyfile  LICENSE  README.md  SECURITY.md  compose.yaml  docker-compose.yml  gotchas.md  mkdocs.yml  pyproject.toml  railway.json  skills-lock.json
.agents/findings/: registry.jsonl
.agents/research/: 2026-07-11-plato-scientific-manuscript-audit.md  2026-07-11-plato-v2-benchmark-gap-map-agent.md  2026-07-12-plato-v2-implementation-and-evidence.md
.github/PULL_REQUEST_TEMPLATE/: dashboard.md
.github/scripts/: check_import_cycles.py
.github/workflows/: ci.yml  dashboard-backend.yml  dashboard-build.yml  dashboard-frontend.yml  dashboard-pages.yml  eval-nightly.yml  integration-postgres.yml  license-audit.yml  lint.yml  security.yml  test-fast.yml
cloudflare/plato-container/: package-lock.json  package.json  wrangler.jsonc
dashboard/: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  RAILWAY.md  README.md  compose.yaml
dashboard/backend/: Dockerfile  README.md  pyproject.toml  pytest.ini
dashboard/backend/src/plato_dashboard/: auth.py  logging_config.py  settings.py  tooling.py
dashboard/backend/src/plato_dashboard/api/: __init__.py  _test_keys_endpoint.py  approvals.py  auth_endpoints.py  capabilities.py  citation_graph_view.py  clarifications.py  cost_caps.py  critiques.py  domains.py  evals_view.py  executor_preferences.py  executors.py  idea_history.py  idea_transcript.py  license_audit_view.py  loop_control.py  manifests.py  novelty.py  publications.py  research_signals.py  retrieval_summary.py  run_presets.py  scientific_capabilities.py  scientific_scores.py  server.py  telemetry.py  telemetry_view.py  tooling.py  user_preferences.py
dashboard/backend/src/plato_dashboard/domain/: models.py
dashboard/backend/src/plato_dashboard/events/: bus.py
dashboard/backend/src/plato_dashboard/middleware/: __init__.py  csrf.py  request_id.py
dashboard/backend/src/plato_dashboard/observability/: __init__.py  logging.py  metrics.py
dashboard/backend/src/plato_dashboard/render/: __init__.py  pipeline.py  quarkdown.py  transformer.py
dashboard/backend/src/plato_dashboard/storage/: key_store.py  project_store.py  publication_store.py
dashboard/backend/src/plato_dashboard/worker/: langgraph_bridge.py  log_tail.py  run_manager.py  session_costs.py  token_tracker.py
dashboard/backend/tests/: conftest.py  test_approvals_api.py  test_artifacts.py  test_auth_endpoints_api.py  test_bus.py  test_capabilities_middleware.py  test_citation_graph_view_api.py  test_clarifications_api.py  test_cors.py  test_cost_caps_api.py  test_critiques_api.py  test_domains_api.py  test_executor_preferences_api.py  test_executors_api.py  test_health.py  test_health_capabilities.py  test_idea_history_api.py  test_idea_transcript_api.py  test_key_store.py  test_license_audit_view_api.py  test_live_log_streaming_e2e.py  test_logging_middleware.py  test_loop_control_api.py  test_manifests_api.py  test_novelty_api.py  test_project_store.py  test_project_tenant_security.py  test_projects.py  test_publications_api.py  test_render.py  test_research_signals_api.py  test_resume.py  test_retrieval_summary_api.py  test_run_manager_project_dir.py  test_run_presets_api.py  test_runs.py  test_session_costs.py  test_sse.py  test_stages.py  test_telemetry_api.py  (+4 more)
dashboard/frontend/: .env.example  .eslintignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
dashboard/scripts/: check-hosted-saas-preflight.sh  check-local-production-gates.sh  check-production-readiness.sh  check_hosted_saas_preflight.py  dev.sh  run-real-smoke.sh
dashboard/spaces/: Dockerfile  README.md  start.sh
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.test.yml
docs/: LICENSE_AUDIT.md  app.md  architecture.md  dashboard.md  deployment.md  docker.md  get_started.md  install.md  prompts.md  resources.md  troubleshooting.md
docs/adr/: 0001-langgraph-as-default-backend.md  0002-postgres-checkpointer.md  0003-domain-profile-pluggability.md  0004-x-plato-user-multi-tenancy.md  0005-sandboxed-executor-protocol.md  0006-autoresearchclaw-stage-mapping.md  0007-known-deferred-work.md  index.md
docs/api_ref/: api_classes.md  api_executors.md  api_journals.md  api_llms.md  api_paper.md  api_plato.md  api_state.md  api_utils.md
docs/examples/: EtE_Gemini_fast.ipynb  idea_check.ipynb  plato_oscillator_full_run.ipynb  research_idea.ipynb  write_paper.ipynb
docs/features/: autonomous-loop.md  citation-validation.md  domain-pluggability.md  evidence-matrix.md  manifest.md  multi-source-retrieval.md  multi-tenant-auth.md  observability.md  quarkdown.md  reviewer-panel.md  sse-events.md
docs/llm_api_keys/: apikeys.md  cost.md  obtaining-api-keys.md  storing-api-keys.md  vertex-ai-setup.md
docs/tutorials/: tut_end2end.md  tut_gui.md  tut_install.md  tut_llm_api.md
evals/: __init__.py  __main__.py  biomedical_benchmarks.py  judge.py  metrics.py  runner.py  tasks.py
evals/biological_novelty/: __init__.py  metrics.py
evals/golden/: cmb_lensing_residuals.json  dark_matter_substructure.json  gw231123_followup.json  harmonic_oscillator.json  protein_structure_alphafold.json  stellar_classification_with_gaia.json
examples/: enhance_input.ipynb  full_workflow.py  get_keywords.ipynb  idea_check.ipynb  oscillator_full_run.ipynb  research_idea.ipynb  write_paper.ipynb
plato/: __init__.py  cli.py  cli_validate.py  config.py  experiment.py  idea.py  key_manager.py  llm.py  logging_config.py  method.py  observability.py  plato.py  research.py  utils.py
plato/domain/: __init__.py
preprint/: Plato-Bio-Supplement.docx  Plato-Bio-bioRxiv-preprint.docx  README.md  SUBMISSION_METADATA.md  build_manuscript.py  manuscript.md
scripts/: generate_sbom.py  license_audit.py  security_smoke.sh
skills/: autoresearch-genealogy  autoresearchclaw-autonomous-research  latex-paper-en  latex-thesis-zh
tests/: conftest.py  full_paper.py
(+504 files in other folders)
