[project]
name = "plato"
version = "1.0.1"
description = "Modular Multi-Agent System for Scientific Research Assistance"
authors = [
  { name = "Pablo Villanueva-Domingo" },
  { name = "Francisco Villaescusa-Navarro"},
  { name = "Boris Bolliet"},
]
maintainers = [
  { name = "Plato", email = "plato.astropilot.ai@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPLv3" }
keywords = ["machine learning","agent","biology","chemistry","cosmology","material sciences","llm"]
dependencies = [
  "langchain-google-genai",
  "langchain-anthropic>=0.3.10",
  "langchain-openai>=0.3.12",
  "langgraph>=0.3.25",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "google-cloud-aiplatform",
  "google-ai-generativelanguage>=0.6.17",
  "flatbuffers>=24.12.23",
  "filelock>=3.17.0",
  "cmbagent>=0.0.1post63",
  "pymupdf",
  "pillow",
  "jsonschema",
  "futurehouse-client",
  "json5",
  "pip",
]

[project.urls]
Homepage = "https://astropilot-ai.github.io/PlatoPaperPage/"
Documentation = "https://plato.readthedocs.io/en/latest/"
Repository = "https://github.com/AstroPilot-AI/Plato"

[project.scripts]
plato = "plato.cli:main"

[project.optional-dependencies]
app = ["plato_app>=1.0.0"]
obs = ["langfuse>=2.0"]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material>=9.6.12",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-git-committers-plugin-2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
