[project]
name = "plato"
version = "1.0.1"
description = "Multi-agent AI scientist that turns experimental data into publication-ready research papers."
authors = [
  { name = "Pablo Villanueva-Domingo" },
  { name = "Francisco Villaescusa-Navarro"},
  { name = "Boris Bolliet"},
]
maintainers = [
  { name = "Plato", email = "plato.astropilot.ai@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPLv3" }
keywords = ["machine learning","agent","biology","chemistry","cosmology","material sciences","llm","autonomous-research","scientific-paper-generation","langgraph","ai-scientist","multi-agent"]
dependencies = [
  "langchain-google-genai>=2.0,<3.0",
  "langchain-anthropic>=0.3.10,<1.0",
  "langchain-openai>=0.3.12,<1.0",
  "langgraph>=0.3.25,<1.1",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "google-cloud-aiplatform",
  "google-ai-generativelanguage>=0.6.17",
  "flatbuffers>=24.12.23",
  "filelock>=3.17.0",
  "cmbagent>=0.0.1post63",
  "pymupdf",
  "pillow",
  "jsonschema",
  "futurehouse-client",
  "json5",
  "pip",
]

[project.urls]
Homepage = "https://astropilot-ai.github.io/PlatoPaperPage/"
Documentation = "https://plato.readthedocs.io/en/latest/"
Repository = "https://github.com/AstroPilot-AI/Plato"

[project.scripts]
plato = "plato.cli:main"

[project.optional-dependencies]
app = ["plato_app>=1.0.0"]
obs = ["langfuse>=2.0"]
postgres = [
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary]>=3.1",
]
rerank = [
  "sentence-transformers>=2.7",
  "torch>=2.0",
  "cohere>=5.0",
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material>=9.6.12",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-git-committers-plugin-2>=2.5.0",
]
# README's "Install" section advertises ``pip install "plato[dashboard]"``;
# without this extra, that install command 404s. The dashboard backend is its
# own package under ``dashboard/backend`` with a separate pyproject — we
# install it editably here so the parent install pulls in the FastAPI gateway
# and arq workers in one shot.
dashboard = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "arq>=0.26",
  "redis>=5.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.18",
  "watchfiles>=0.24",
  "aiofiles>=24.1",
  "fakeredis>=2.26",
  "cryptography>=43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Static type-checking — minimal opt-in baseline.
#
# Not strict mode: the codebase has plenty of legacy ``Any`` usages
# (LangGraph state, KeyManager, etc.) that will need a planned cleanup
# before strict can be turned on. The settings below catch the
# highest-value mistakes (missing returns, unreachable code, untyped
# decorators leaking into typed call sites) without forcing a full
# annotation pass first.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_optional = true
check_untyped_defs = false  # tighten in a follow-up pass
disallow_untyped_defs = false  # tighten in a follow-up pass
disallow_any_generics = false  # tighten in a follow-up pass

[[tool.mypy.overrides]]
# Third-party packages without type stubs that we know about.
module = ["cmbagent.*", "pymupdf.*", "fitz.*", "futurehouse_client.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest configuration.
#
# Default discovery worked because everything was named test_*.py, but a few
# safety/CI hygiene defaults were missing: strict marker registration kept
# typos like ``@pytest.mark.slowww`` from silently passing, asyncio_mode=auto
# matches the codebase's convention of un-decorated async tests, and the
# warning filter forces Pydantic v2 deprecation warnings (which we trip on
# regularly) into errors so the suite breaks fast when the SDK shifts under us.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
filterwarnings = [
  "error::DeprecationWarning:pydantic.*",
  "ignore::DeprecationWarning:botocore.*",
]
markers = [
  "slow: marks tests that take >5 seconds (deselect with -m 'not slow')",
  "live: marks tests that hit live external APIs (e.g. arXiv, Crossref)",
  "trajectory: marks LangGraph trajectory tests",
]
