[project]
name = "plato-dashboard-backend"
version = "0.1.0"
description = "FastAPI gateway + arq workers for the Plato web dashboard"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "arq>=0.26",
  "redis>=5.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.18",
  "watchfiles>=0.24",
  "aiofiles>=24.1",
  "fakeredis>=2.26",
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.7",
]

[project.scripts]
plato-dashboard-api = "plato_dashboard.api.server:cli"
plato-dashboard-worker = "plato_dashboard.worker.runner:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plato_dashboard"]
